tests/theories/success/0010-clone-with-type.ec
require import Int.

theory T.
  type t.
end T.

clone T as U with type t = int.

op myop : U.t = 0.
